# acthpa-website

./: .gitignore  Activities.md  README-nix.md  README.md  about.md  acthpa-website.cabal  acthpa-website2.cabal  default.nix  flying-ACT.md  flying.md  hang-gliding.md  haskell-package-overrides.nix  index.md  nixpkgs.json  paragliding.md  pkg.nix  shell.nix  site.hs  stack.yaml
Activities/: calendar.md
Articles/: fences.md  flying-canberra-a-few-tips.md  the-windtalker-man.md
Flying-ACT/: reading-the-weather-in-canberra.md  site-records.md  sites.md  tandem-pilots.md  weather.md
build-site/: Main.hs  Main.hs.html  Menu.hs  Page.hs
css/: icomoon.css  style.css
doc/: changelog.adoc  design.adoc  design2.md  old-site-review.adoc  requirements.adoc  use-cases.adoc
features/: next-meeting.md
flying/: paragliding.md
flying-ACT/: schools.md  site-records.md  tandem-pilots.md  weather.md
scrape/: Flights.hs  Leonardo.hs  Main.hs  XContest.hs  XContest2.hs
scrape/XContest/: Browse.hs  Parse.hs
site/: advice.md  flying-ACT.md  future.md  index.md  info.md  now.md  past.md  stories.md
site/about/: Alistair-Dickie.md  Michael-Porter.md  Phil-Robinson.md
site/advice/: a-few-things-about-AIRSPACE.md  collector-xc-tips.md  flying-canberra-a-few-tips.md  how-not-to-throw-your-reserve.md  how-to-go-xc-from-collector.md  how-to-thwart-an-eagle-attacking.md  novice-experiences-of-manilla-xc-camp.md  reading-weather-canberra.md
site/articles/: fences.md  flying-canberra-a-few-tips.md
site/css/: animate.css  default.css  flexslider.css  icomoon.css  style.css
site/events/: 2020-corryong-easter-club-fly-in.md  agm-oct-2019.md  bright-2021.md  bright-2022.md  bright2020.md  club-meeting-aug-2019.md  club-meeting-feb-2020.md  club-meeting-jul-2019.md  club-meeting-mar-2020.md  club-meeting-nov-2019.md  club-meeting-nov-2020.md  club-meeting-oct-2020.md  club-meeting-sep-2019.md  club-meeting-sep-2020.md  corryong-2020.md  corryong-2021.md  corryong-2022.md  jono-sam-100k-nov-2020.md  kari-worlds-2019.md  manilla-xc-camp-2020.md  next-meeting.md  ntnzo-2022.md  parachute-repack-sep-2020.md  radio-policy-proposal.md  state-of-origin-2020.md  turnpoint-challenge-2020.md  turnpoint-challenge-2021.md  turnpoint-challenge-sep-2020.md
site/features/: facebook.md  kari-worlds-2019.md  next-meeting.md  wind-talkers.md
site/files/: The 2018 annual report ACTHPA.docx  airspace.pptx  members.csv
site/files/tasks/: SpringHillFlyIn-2020-09.tsk  SpringHillFlyIn-2020-09.xctsk
site/files/waypoints/: ACTHPA.kml  ACTHPA.wpt  Corryong.kml  Corryong.wpt  TPCACT2020.kml  TPCACT2020.wpt  TPCACTHPA2020-v1.0.kml  TPCACTHPA2020-v1.0.wpt  TPCACTHPA2020F-v1.0.txt  TPCVictoria2020.kml  TPCVictoria2020.wpt  TPCVictoria2020F.txt  TPCacthpa2021-v1.0.txt  TPCacthpa2021-v1.0.wpt  gen-acthpa.sh
site/flying/: hang-gliding.md
site/flying-ACT/: sites.md
site/images/2020-11-08-jono-sam-xc/: New-Microsoft-Word-Document.docx
site/images/corryong-open-2022/: corryong-pg-open-2022.txt
site/info/: ACTHPA XC Protocol.docx:Zone.Identifier  about.md  faq.md  radios.md  site-records.md  sites.md  telegram.md  weather-resources.md  what-is-hang-gliding.md  what-is-paragliding.md  xc-contacts.md  xc-protocol.md  zulip.md
site/info/about/: Matt-Smith.md  Nick-Siefken.md  Wesley-Kilham.md
site/info/sites/: canglide.md  collector-biosecurity-declaration.md  collector.md  honeysuckle.md  lake-george.md  lanyon.md  one-tree-hill.md  spring-hill-biosecurity-declaration.md  spring-hill-general-entry.md  spring-hill.md
site/js/: main.js
site/stories/: kari-worlds-2019.md  the-windtalker-man.md
site/templates/: breadcrumbs.html  default.html  eventList.html  eventListing.html  feature.html  footer.html  head.html  history.html  index.html  item-listing.html  items-list.html  nav.html  photostrip.html  postList.html  postListing.html  tail.html  windmap.html
src/: Main.hs
src/Hakyll/: Menu.hs
templates/: articles.html  breadcrumbs.html  default.html  feature.html  footer.html  head.html  item-listing.html  nav.html  photostrip.html  tail.html
test/: Worldwide flights search __ XContest.org - world of XC paragliding.html  view-source_https___www.paraglidingforum.com_leonardo_tracks_AU_alltimes_brand_all,cat_0,class_all,xctype_all,club_0.15,pilot_0_0,takeoff_all&sortOrder=FLIGHT_KM.html
