cabal-version:      2.4
name:               acthpa-website
version:            0.1.0.0
build-type:         Simple

executable site
  main-is:          Main.hs
  hs-source-dirs:   src
  other-modules:    Hakyll.Menu
  build-depends:    base ^>=4.12.0.0
                  , blaze-html ^>= 0.9.1.1
                  , hakyll ^>= 4.12
                  , filepath ^>= 1.4.2.1
                  , lens ^>= 4.17
                  , pandoc ^>= 2.7.3
                  , taggy-lens ^>= 0.1.2
                  , text ^>= 1.2.3
  ghc-options:      -threaded
  default-language: Haskell2010
  ghc-options:      -Weverything
                    -Wno-all-missed-specialisations
                    -Wno-implicit-prelude
                    -Wno-missed-specialisations
                    -Wno-missing-exported-signatures
                    -Wno-missing-import-lists
                    -Wno-missing-local-signatures
                    -Wno-monomorphism-restriction
                    -Wno-safe
                    -Wno-unsafe
