name:               acthpa-website2
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.12.*
                  , filepath >= 1.4.2.1 && < 1.5
  ghc-options:      -threaded
  default-language: Haskell2010
